objects/Case_Callout_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSR_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBSR Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSR_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBSR Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSR_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBSR Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSR_Issue_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBSR Issue Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSR_Issue_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBSR Issue Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Callout Fields</label>
</CustomObject>